--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,12 @@ body {
   margin: 0;
 }
 .bg{
-  background-image: url("/build/images/saltosdelmonday.jpg");
+  background-image: url("../build/images/bg.jpg"); 
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
   height: 100vh;
-  background-size:cover ;
 }
 
 a{
@@ -25,7 +24,7 @@ nav{
   display: flex;
   justify-content: center;
   padding: 16px 32px;
-  box-shadow:0px 0px 8px gray; 
+  box-shadow:0px 0px 9px gray; 
 }
 nav a {
   color: rgb(0, 0, 0);
@@ -36,7 +35,7 @@ nav a {
   padding-bottom: 6px;
   padding-top: 6px;
  
-  transition: color 0.3s;
+  transition: color 0.8s;
 }
 nav a:hover {
   border-bottom: 5px solid blue;
